# rusty-book-manager

./: Cargo.toml  Dockerfile  Dockerfile.cargo-chef  Makefile.toml  README.md  compose.yaml
.cargo/: config.toml
.github/workflows/: ci.yaml
adapter/: Cargo.toml
adapter/migrations/: 20240721050548_start.down.sql  20240721050548_start.up.sql
adapter/src/: lib.rs
adapter/src/database/: mod.rs
adapter/src/database/model/: auth.rs  book.rs  checkout.rs  user.rs
adapter/src/redis/: mod.rs  model.rs
adapter/src/repository/: auth.rs  book.rs  checkout.rs  health.rs  user.rs
adapter/src/repository/fixtures/: book.sql  book_checkout.sql  book_list.sql  checkout.sql  common.sql
api/: Cargo.toml
api/src/: extractor.rs  lib.rs  openapi.rs
api/src/handler/: auth.rs  book.rs  checkout.rs  health.rs  mod.rs  user.rs
api/src/model/: auth.rs  book.rs  checkout.rs  mod.rs  user.rs
api/src/route/: auth.rs  book.rs  health.rs  mod.rs  user.rs  v1.rs
api/tests/api/: book.rs  helper.rs  main.rs
data/: initial_setup.sql
kernel/: Cargo.toml
kernel/src/model/: id.rs  list.rs  mod.rs  role.rs
kernel/src/model/auth/: event.rs  mod.rs
kernel/src/model/book/: event.rs  mod.rs
kernel/src/model/checkout/: event.rs  mod.rs
kernel/src/model/user/: event.rs  mod.rs
kernel/src/repository/: auth.rs  book.rs  checkout.rs  health.rs  mod.rs  user.rs
registry/: Cargo.toml
registry/src/: lib.rs
shared/: Cargo.toml
shared/src/: config.rs  env.rs  error.rs  lib.rs
snippets/06/rstest-example/: Cargo.toml
snippets/06/rstest-example/output/: expanded-lib-6-2-1.rs  expanded-lib-6-2-4-2.rs  expanded-lib-6-3.rs
snippets/06/rstest-example/src/: lib-6-2-1.rs  lib-6-2-4-1.rs  lib-6-2-4-2.rs  lib-6-3.rs
snippets/06/sqlx-test-example/: .env  Cargo.toml
snippets/06/sqlx-test-example/migrations/: 20240916151126_setup.sql
snippets/06/sqlx-test-example/src/: lib-6-4-1.rs  lib-6-4-2.rs
snippets/06/sqlx-test-example/src/fixtures/: common.sql
src/: main.rs
